--- a/learnWD/Templates/day3.html
+++ b/learnWD/Templates/day3.html
@@ -47,11 +47,13 @@
 
 
 </head>
-<body>
+<body ="background-image:url('static/images/img1.jpg')">
 
 	<h1>how to link web sites in nav bar using router</h1> 
 	<h2>Background image from static folder into the web game </h2>
 	<h2>How to make use of BOOTSTRAP <h2>
+	<p> learned somethibng new <br> background-image:url('static/images/img1.png); <br> here url_for is not used <br> url_for is used when you're returning a compleate 
+	page, since we have an image which is not a page but an element / part of a page so we r going use only url and not url_for </p>
 
 
 </body>
